<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pavilion.designprojectll_v2.Auth.RegisterActivity"
    android:background="@color/colorCL"
   >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="97dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Container_bot_top_padding"
            android:layout_marginBottom="@dimen/Container_bot_top_padding"
            android:text="@string/register_healing"
            android:textColor="@color/icons"
            android:textAlignment="center"
            android:textSize="@dimen/healing1"
            android:id="@+id/textView"
            />

        <EditText
            style="@style/Inputs"
            android:hint="@string/correo"
            android:id="@+id/editTextCorreo"
            />

        <EditText

            android:id="@+id/editTextContraseña"
            android:hint="@string/contraseña"
            style="@style/Inputs"
            />
        <EditText

            android:id="@+id/editTextNombre"
            android:hint="@string/nombre"
            style="@style/Inputs" />
        <EditText

            android:id="@+id/editTextTelefono"
            android:hint="@string/numero_telefono"
            style="@style/Inputs" />

        <Button
            android:id="@+id/ButtonRegister"
            style="@style/Buttons"/>
    </LinearLayout>
</RelativeLayout>
